# active_mapping_3D

./: .gitignore  .gitmodules  README.md  requirements.txt  setup.sh
simulation/: README.md
simulation/airframes/: 4022_gz_px4_gsplat
src/gsplat/: CMakeLists.txt  package.xml
src/gsplat/config/: bridge.yaml
src/gsplat/launch/: sample_15016.launch.py  sample_65035.launch.py
src/gsplat/models/lunar_sample_15016/: model.config  model.sdf
src/gsplat/models/lunar_sample_15016/meshes/: 15016-0_SFM_Web-Resolution-Model_Coordinate-Registered.mtl
src/gsplat/models/lunar_sample_65035/: model.config  model.sdf
src/gsplat/models/lunar_sample_65035/meshes/: 65035-0_SFM_Web-Resolution-Model_Coordinate-Registered.mtl
src/gsplat/scripts/: gimbal_control.py
src/gsplat/worlds/: sample_15016.sdf  sample_65035.sdf
src/mapping/: CMakeLists.txt  package.xml
src/mapping/config/: active_recon.rviz  gz_rgbd.yaml
src/mapping/env-hooks/: orbslam3.sh
src/mapping/launch/: active_recon.launch.py  manual_mapping.launch.py  orbit_mapping.launch.py  orbslam3.launch.py  survey.launch.py
src/mapping/scripts/active_recon/: active_mapper_node.py  gaussian_model.py  rviz_publisher.py  splat_viewer.py  voxel_grid.py
src/mapping/scripts/exploration/: camera_debug.py  explore.py  manual_flight.py
src/mapping/scripts/orbit/: orbit_mapper.py
src/mapping/scripts/reconstruction/: colmap.sh
src/nbv/: CMakeLists.txt  package.xml
src/nbv/launch/: nbv_recon.launch.py
src/nbv/scripts/: active_mapper_node_nbv.py  nbv_planner.py  offline_train.sh  poses_to_colmap.py  postprocess.sh  run_nbv.sh  splat_viewer_nbv.py  voxel_grid_nbv.py
(+15 files in other folders)
