<?xml version="1.0"?>
<package format="3">
  <name>gsplat</name>
  <version>0.0.0</version>
  <description>Gaussian splatting active 3D reconstruction with PX4 gimbal RGBD drone</description>
  <maintainer email="bharathvdesikan@gmail.com">blazair</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_image</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
